[package]
name = "display-more"
description = "helper to display various types"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
edition = "2021"

[features]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }


[dev-dependencies]
anyhow = { version = "1.0.65" }
# Enable other features for testing
tokio = { version = "1.35.0", features = ["sync", "time", "macros", "rt"] }

#[[example]]
#name = "basic_usage"
#path = "examples/basic_usage.rs"
