[package]
name = "display-more"
description = "helper to display various types"
version = "0.2.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
edition = "2021"

[features]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }

[dev-dependencies]
