[package]
name = "display-more"
description = "helper to display various types"
version = "0.2.3"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/drmingdrmer/display-more"
homepage = "https://github.com/drmingdrmer/display-more"
documentation = "https://docs.rs/display-more"
readme = "README.md"
keywords = ["display", "formatting", "helper", "option", "slice"]
categories = ["rust-patterns", "value-formatting"]

[features]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }

[dev-dependencies]
